--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,18 @@
 @charset "utf-8";
 /* CSS Document */
 
-/**{box-sizing: border-box;}*/
+*::after, *::before, *{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;}
 
 body,td,th,p{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   color: #333;
   line-height: 1.5;
+  margin: 0;
 }
 body {
   background-color: #fdfdfd;
@@ -52,10 +57,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   font-size: 1em;
   letter-spacing: 1px;
   padding: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -73,7 +75,6 @@ header {
 }
 
 nav {
-  width: 100%;
   height: 80px;
   background-color: #252831;
   text-align:center;
@@ -81,6 +82,7 @@ nav {
 }
 nav h1 {
   margin: auto;
+  text-align: center;
 }
 nav h1 a {
   color: #fff;
@@ -94,7 +96,7 @@ nav h1 a {
     list-style: none;
     background-color: #eee;
     margin: 0;
-    width: calc(100% - 5px);
+    max-width: 100%;
 }
 
 /* Display list items side by side */
@@ -124,12 +126,13 @@ nav h1 a {
 /* ====================== Map ====================== */
 #map {
   height: 400px;
-  width: 100%;
+  max-width: 100%;
   background-color: #ccc;
   animation: scaleIn 2s ease-in-out 1 1s;
   transition: all 2s ease;
 }
-
+.hide-map {display: none;}
+#map.show-map {display: block;}
 @-webkit-keyframes scaleIn {
   from{
     opacity:0;
@@ -152,6 +155,43 @@ nav h1 a {
   }
 }
 
+.map-btn-container {
+  position: fixed;
+  top:50%;
+  left:0;
+  font-size: 2.5em;
+  border-radius: 5px;
+  background: rgba(0,0,0,0.7);
+  padding: 1rem;
+  color: #fff;
+  width:70px;
+  text-align: center;
+  transition: all 0.5s ease;
+  animation: slideIn 0.5s 1s linear 1 forwards;
+  transform: translate(-80px,0);
+}
+@-webkit-keyframes slideIn {
+  from{
+    opacity: 0;
+    transform:translate(-80px,0);
+  }
+  to{
+    opacity: 1;
+    transform:translate(0px,0);
+  }
+}
+
+@keyframes slideIn {
+  from{
+    opacity: 0;
+    transform:translate(-30px,0);
+  }
+  to{
+    opacity: 1;
+    transform:translate(0px,0);
+  }
+}
+.map-btn {animation: scaleIn 0.5s linear 2s 1;}
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
  /* max-width: 100%;*/
@@ -162,6 +202,7 @@ nav h1 a {
   flex-direction: row;
   align-items: center;
   padding: 10px;
+  overflow:hidden;
 }
 .filter-options h2 {
   color: white;
@@ -171,7 +212,8 @@ nav h1 a {
   margin: 0 20px;
 }
 .filter-options select {
-  background-color: white;
+  background-color: #3397DB;
+  color: #fff;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 1em;
@@ -311,18 +353,21 @@ nav h1 a {
 /* ====================== Restaurant Details ====================== */
 .inside {padding: 0; overflow-x: hidden;}
 .inside header {
+  right: 0;
+  left: 0;
   top: 0;
   width: 100%;
   z-index: 1000;
+  overflow: hidden;
 }
 .inside header nav {padding: 1em;}
 .inside header nav a {
   font-size: 1.3em;
-  line-height: 2.2;
+  line-height: 1.5;
 }
 .inside #map-container {
   background: #F1F1F1 none repeat scroll 0 0;
-  height: 90%;
+  height: 50%;
   right: 0;
   top: 80px;
   width: 100%;
@@ -330,14 +375,18 @@ nav h1 a {
 .inside #map {
   background-color: #ccc;
   height: 100%;
-  width: 100%;
+  max-width: 100%;
   padding: 150px;
 }
 .inside #footer {
+  position: absolute;
+  left: 0;
+  right: 0;
   bottom: 0;
   position: absolute;
   width: 100%;
   text-align: center;
+  overflow: hidden;
 }
 #restaurant-name {
   color: #3397DB;
